<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ibeacon</string>
    <string name="hello_world">Hello iBeacon!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Close</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rangeDesc">Range</string>
    <string name="power">Power</string>
    <string name="rangingSwitch">Ranging</string>
    <string name="monitoringSwitch">Monitoring</string>
    <string name="chars">Beacon settings</string>
    <string name="title_activity_beacon_settings">BeaconSettingsActivity</string>

</resources>
